# fix_video_band

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
src/fix_video_band/: __init__.py  cli.py  lib.py  main.py
