[project]
name = "fix-video-band"
version = "0.1.0"
description = "Detect and repair stuck-pixel vertical bands in video files"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Akshet Pandey", email = "argetlam.akshet@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "opencv-python>=4.13.0.92",
    "numpy>=2.4.2",
    "rich>=14",
]

[project.scripts]
fix-video-band = "fix_video_band:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.11.13",
    "mypy>=1.19.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"
fix = true
preview = true
src = ['.']

[tool.ruff.format]
docstring-code-format = true
preview = true
quote-style = "single"
indent-style = "space"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "N",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "DJ",
    "EXE",
    "FA",
    "ISC",
    "ICN",
    "LOG",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "RSE",
    "RET",
    "SLF",
    "SLOT",
    "SIM",
    "TID",
    "TCH",
    "INT",
    "ARG",
    "TD",
    "ERA",
    "PGH",
    "PL",
    "C",
    "E",
    "R",
    "W",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
  "COM812",   # missing-trailing-comma | ruff-format
]

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = true

[tool.ruff.lint.flake8-unused-arguments]
ignore-variadic-names = true

[tool.mypy]
# Import discovery
explicit_package_bases = true
ignore_missing_imports = true
follow_imports_for_stubs = true
# Platform configuration
python_version = "3.13"
platform = "linux"
always_true = [
  "TYPE_CHECKER_MYPY"
]
always_false = [
  "TYPE_CHECKER_PYRIGHT"
]
# Disallow dynamic typing
disallow_any_unimported = false
disallow_any_generics = true
disallow_untyped_defs = true
# Untyped definitions and calls
check_untyped_defs = true
# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
# Miscellaneous strictness flags
local_partial_types = true
enable_error_code = [
  "redundant-self",
  "comparison-overlap",
  "redundant-expr",
  "possibly-undefined",
  "truthy-bool",
  "truthy-iterable",
  "ignore-without-code",
  "unused-awaitable",
  "explicit-override",
  "narrowed-type-not-subtype",
]
strict_equality = true
strict = true
extra_checks = true
# Configuring error messages
show_error_context = true
show_column_numbers = true
pretty = true
# Incremental mode
sqlite_cache = true
cache_fine_grained = true
# Advanced options
# Miscellaneous
scripts_are_modules = true
warn_unused_configs = true
# Others
enable_incomplete_feature = [
  "PreciseTupleTypes",
]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "Linux"
typeCheckingMode = "basic"
defineConstant = { TYPE_CHECKER_MYPY = false, TYPE_CHECKER_PYRIGHT = true }